--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ venv
 __pycache__/
 /resources/images/flags*/
 /resources/pokemon*/
+/resources/flags*/
 /resources/pokemon_names_bak.txt
 /resources/countries.txt
 /resources/flag_links.txt
+/resources/images/.DS_Store
